--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
-<title>Insert title here</title>
+<title>Insert title here2</title>
 <link type="text/css" rel="stylesheet" href="src/resources/css/base.css" >
 <!-- link type="text/css" rel="stylesheet" href="dist/test/resources/css/base.css" -->
 <style type="text/css">
