--- a/b.html
+++ b/b.html
@@ -5,7 +5,9 @@
 <title>Insert title here</title>
 
 <script type="text/javascript" src="/src/core/jquery.js"></script>
-
+<style>
+	body{background:#CCFFCC;height:1024px;}
+</style>
 </head>
 <body>
 <script>
