--- a/demo/vertical-align.html
+++ b/demo/vertical-align.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=gbk" />
-<title>ÎŞ±êÌâÎÄµµ</title>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<title>æ— æ ‡é¢˜æ–‡æ¡£</title>
 <style type="text/css">
 
 	*{margin:0;padding:0;}
@@ -11,12 +11,12 @@
 	}
 	.imgview {
 	    display: table-cell;
-	    *font-size: 263px;/*´óÔ¼ÊÇ ¸ß¶ÈµÄ0.875±¶¡£(262.5¡Ö300*0.875)*/
+	    *font-size: 263px;/*å¤§çº¦æ˜¯ é«˜åº¦çš„0.875å€ã€‚(262.5â‰ˆ300*0.875)*/
 	    height: 300px;
 	    overflow: hidden;
-	    vertical-align: middle;/*´¹Ö±¾ÓÖĞ*/
+	    vertical-align: middle;/*å‚ç›´å±…ä¸­*/
 	    width: 300px;
-	    text-align: center;/*Ë®Æ½¾ÓÖĞ*/
+	    text-align: center;/*æ°´å¹³å±…ä¸­*/
 	    background-color:#ccc;
 	    
 	}
@@ -47,18 +47,18 @@
 </head>
 
 <body>
-	<!-- ·½·¨Ò»£º²ÉÓÃ×ÖÌå³Å¿ªµÄ·½·¨ -->
+	<!-- æ–¹æ³•ä¸€ï¼šé‡‡ç”¨å­—ä½“æ’‘å¼€çš„æ–¹æ³• -->
 	<div class="imgview">
 		 <img src='images/g1.gif' />
 	</div>
 	<hr/>
-	<!-- ·½·¨¶ş£º²ÉÓÃ±³¾°Í¼¶¨Î»µÄ·½·¨ ¡£s.gifÊÇÒ»ÕÅÍ¸Ã÷Í¼Æ¬¡£-->
+	<!-- æ–¹æ³•äºŒï¼šé‡‡ç”¨èƒŒæ™¯å›¾å®šä½çš„æ–¹æ³• ã€‚s.gifæ˜¯ä¸€å¼ é€æ˜å›¾ç‰‡ã€‚-->
 	<div class="vertical_box">
 		<img class="vertical_img" src="/src/resources/images/s.gif" style="background-image:url(images/g1.gif);" />
 	</div>
 	<hr/>
 	
-	<!-- ·½·¨¶ş£º²ÉÓÃÍ¸Ã÷Í¼Æ¬³Å¿ªµÄ·½·¨ ¡£s.gifÊÇÒ»ÕÅÍ¸Ã÷Í¼Æ¬¡£-->
+	<!-- æ–¹æ³•äºŒï¼šé‡‡ç”¨é€æ˜å›¾ç‰‡æ’‘å¼€çš„æ–¹æ³• ã€‚s.gifæ˜¯ä¸€å¼ é€æ˜å›¾ç‰‡ã€‚-->
 	<div class="vertical_box2">
 		<img class="vertical_img2" src="images/g1.gif" />
 		<img class="vertical_blank_img" src="/src/resources/images/s.gif" />
@@ -66,14 +66,14 @@
 	
 	<hr/>
 	
-	<!-- ¶àĞĞÎÄ×Ö´¹Ö±¾ÓÖĞ -->
+	<!-- å¤šè¡Œæ–‡å­—å‚ç›´å±…ä¸­ -->
 	<div class="imgview">
 		 <span style="display:inline-block;font-size:12px;vertical-align: middle;">
-		 	²ÉÓÃ±³¾°Í¼¶¨Î»µÄ·½·¨ ¡£
+		 	é‡‡ç”¨èƒŒæ™¯å›¾å®šä½çš„æ–¹æ³• ã€‚
 		 	<br/>
-		 	²ÉÓÃ±³¾°Í¼¶¨Î»µÄ·½·¨ ¡£
+		 	é‡‡ç”¨èƒŒæ™¯å›¾å®šä½çš„æ–¹æ³• ã€‚
 		 	<br/>
-		 	²ÉÓÃ±³¾°Í¼¶¨Î»µÄ·½·¨ ¡£
+		 	é‡‡ç”¨èƒŒæ™¯å›¾å®šä½çš„æ–¹æ³• ã€‚
 		 </span>
 	</div>
 </body>
