tabbar add icon

--- a/demo/index.html
+++ b/demo/index.html
@@ -23,9 +23,9 @@
 <div class="viewPort hideBottom">  
     <div id="top">
     	<div  class="tabNavBox hasTabCtrl moreTab">
-    	    <a class="tabCtrl ctrlLeft" href="javascript:;">左滚</a>
-            <a class="tabCtrl ctrlRight" href="javascript:;">右滚</a>
-            <a class="tabCtrl ctrlMore" href="javascript:;">更多 </a>
+    	    <a class="tabCtrl ctrlLeft" href="javascript:;" title="左滚"></a>
+            <a class="tabCtrl ctrlRight" href="javascript:;" title="右滚"></a>
+            <a class="tabCtrl ctrlMore" href="javascript:;" title="更多"></a>
 			<ul id="tabNav" class="tabNav clearfix">
 				<li data-id="a" class="active noClose"><a href="#a">Tab One<span class="closeIco"></span></a></li>
 				<li data-id="b" ><a href="#b">Tab Two<span class="closeIco"></span></a></li>
