--- a/demo/ui/searchInput.html
+++ b/demo/ui/searchInput.html
@@ -24,6 +24,7 @@
 				url: 'searchInput.php',
 				crossX:true, //跨域模式
 				dataPath:'data',
+				maxHeight: '50px',
 				itemTplFn: function(item){
 					return item;
 				}
